--- a/Lab6. Face Recognition/FaceRecognitionTracker/App.xaml
+++ b/Lab6. Face Recognition/FaceRecognitionTracker/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="Lab5.ReactionToCloud.App"
+    x:Class="FaceRecognitionTracker.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Lab5.ReactionToCloud"
+    xmlns:local="using:FaceRecognitionTracker"
     RequestedTheme="Light">
 
 </Application>
