--- a/Lab6. Face Recognition/FaceRecognitionTracker/MainPage.xaml
+++ b/Lab6. Face Recognition/FaceRecognitionTracker/MainPage.xaml
@@ -1,13 +1,15 @@
 ﻿<Page
-    x:Class="Lab5.ReactionToCloud.MainPage"
+    x:Class="FaceRecognitionTracker.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Lab5.ReactionToCloud"
+    xmlns:local="using:FaceRecognitionTracker"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock x:Name="txt" FontSize="60" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Grid x:Name="FacesCanvas">
+                <CaptureElement x:Name="ViewFinder" />
+                <Rectangle x:Name="FaceRect" Visibility="Collapsed" StrokeThickness="2" Stroke="Yellow" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+            </Grid>
     </Grid>
 </Page>
